Bug 129888 - FILEOPEN: Incorrect shape position
Summary: FILEOPEN: Incorrect shape position
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Attila Bakos (NISZ)
URL:
Whiteboard: target:6.5.0 target:6.4.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: layoutInCell
  Show dependency treegraph
 
Reported: 2020-01-08 15:59 UTC by Xisco Faulí
Modified: 2024-08-26 10:30 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
docx file (21.15 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-01-08 15:59 UTC, Xisco Faulí
Details
comparison MSO 2010 and LibreOffice 6.5 Master (126.05 KB, image/png)
2020-01-08 16:01 UTC, Xisco Faulí
Details
sample1fixed (76.49 KB, image/png)
2020-01-17 11:54 UTC, Attila Bakos (NISZ)
Details
sample2fixedtoo (64.11 KB, image/png)
2020-01-17 11:55 UTC, Attila Bakos (NISZ)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-01-08 15:59:35 UTC
Created attachment 157010 [details]
docx file

Steps to reproduce:
1. Open attachment 143427 [details] from bug 118671 or attached document

-> Vertical line is shifted to the right. See comparison image

Reproduced in

Version: 6.5.0.0.alpha0+
Build ID: 4f6d95ead1286748810e937c7672de08b8b39a38
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2020-01-08 16:01:11 UTC
Created attachment 157011 [details]
comparison MSO 2010 and LibreOffice 6.5 Master
Comment 2 Xisco Faulí 2020-01-08 16:02:38 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=10f29d8bf05d44ca8bc11d34d1294ec17f8ac0f1

author	Bakos Attila <bakos.attilakaroly@nisz.hu>	2019-12-14 12:36:13 +0100
committer	László Németh <nemeth@numbertext.org>	2019-12-20 08:04:15 +0100
commit 10f29d8bf05d44ca8bc11d34d1294ec17f8ac0f1 (patch)
tree 0679ed8ae7758ea48944234c3cc204f359c000ee
parent fdb5ce011cb043475869d0b607ea25b8f32b4314 (diff)
tdf#87569 tdf#109411 DOCX import: fix shape anchor in tables

Bisected with: bibisect-linux64-6.5

Adding Cc: to Bakos Attila
Comment 3 Xisco Faulí 2020-01-08 16:05:48 UTC
Same issue reproduced with attachment 98963 [details] from bug 78651 -> Page number on page 1 is shifted to the right as well
Comment 4 Attila Bakos (NISZ) 2020-01-10 12:16:29 UTC
I just finished my last fix and searched for a new task, and found this one... 
I hope I can fix it as quickly, as you have found it... :)
Comment 5 Commit Notification 2020-01-17 11:53:31 UTC
Bakos Attila committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/14ad64270e4fbca3c24da6f55f260b1fb229556a

tdf#129888 DOCX shape import: handle o:allowincell

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Attila Bakos (NISZ) 2020-01-17 11:54:41 UTC
Created attachment 157218 [details]
sample1fixed
Comment 7 Attila Bakos (NISZ) 2020-01-17 11:55:15 UTC
Created attachment 157219 [details]
sample2fixedtoo
Comment 8 Commit Notification 2020-01-20 07:36:16 UTC
Bakos Attila committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/47bc0ff1ad0f07b07a75f55d3bb898e113a415b2

tdf#129888 DOCX shape import: handle o:allowincell

It will be available in 6.4.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2020-01-20 08:39:02 UTC
Verified in

Version: 6.5.0.0.alpha0+
Build ID: fc1f85127968d1c2e0a53dace51bf8a78f9e6ca5
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

@Bakos, thanks for fixing this issue!!