writerfilter/source/ooxml/OOXMLFastContextHandler.hxx
@@ -226,6 +226,7 @@ protected:
     const css::uno::Reference< css::uno::XComponentContext >& getComponentContext() const { return m_xContext;}
 
     bool inPositionV;
+    bool mbLayoutInCell; // o:allowincell
     OOXMLValue::Pointer_t mpGridAfter;
 
 private:
